Project scientific report v1

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -1,5 +1,5 @@
 @misc{Poisson,
-  author = {{Sylvain Veilleux}},
+  author = {{S.\ Veilleux}},
   title  = {{Observational astronomy: 1. Some Statistical Basics}},
   howpublished    = {University of Maryland, Department of Astronomy. Fall 2006, ASTR310. <\url{http://www.astro.umd.edu/~veilleux/ASTR310/fall06/statis.pdf}>" [žiūr.\ 2019-01-22]}
 }
@@ -10,24 +10,24 @@
 }
 
 @misc{pythia81,
-  author = {{Torbjörn Sjöstrand, Stephen Mrenna, Peter Skands}},
+  author = {{T.\ Sjöstrand, S.\ Mrenna, P.\ Skands}},
   title  = {{A Brief Introduction to PYTHIA 8.1}},
   year   = {2008},
-  howpublished    = {Comput. Phys. Commun. 178:852-867}
+  howpublished    = {Comput.\ Phys.\ Commun.\ 178 852}
 }
 
 @misc{pythia82,
-  author = {{Torbjörn Sjöstrand, Stefan Ask, Jesper R. Christianse et al.}},
+  author = {{T.\ Sjöstrand et al.}},
   title  = {{An Introduction to PYTHIA 8.2}},
   year   = {2015},
-  howpublished = {Comput. Phys. Commun. 191:159-177}
+  howpublished = {Comput.\ Phys.\ Commun.\ 191 159}
 }
 
 @misc{fewz,
-  author = {{Ryan Gavin, Ye Li, Frank Petriello, Seth Quackenbush}},
+  author = {{R.\ Gavin et al.}},
   title  = {{FEWZ 2.0: A code for hadronic Z production at next-to-next-to-leading order}},
   year   = {2011},
-  howpublished    = {Comput. Phys. Commun. 182:2388-2403}
+  howpublished    = {Comput.\ Phys.\ Commun.\ 182 2388}
 }
 
 @misc{cmsswtwiki,
@@ -49,27 +49,27 @@
 
 
 @misc{HLtrigger,
-  author  = {{Valentina Gori}},
+  author  = {{V.\ Gori}},
   title   = {{The CMS High Level Trigger}},
   year    = {2014},
-  howpublished = {Int. J. Mod. Phys. Conf. Ser. 31 1460297}
+  howpublished = {Int.\ J.\ Mod.\ Phys.\ Conf.\ Ser.\ 31 1460297}
 }
 
 @misc{L1trigger,
-  author  = {{Jim Brooke}},
+  author  = {{J.\ Brooke}},
   title   = {{Performance of the CMS Level-1 Trigger}},
   year    = {2013},
   howpublished = {PoS ICHEP2012 508}
 }
 
 @misc{pseudorapidity,
-  author  = {{Ed Daw}},
+  author  = {{E.\ Daw}},
   title   = {{Lecture 7 -- Rapidity and pseudorapidity}},
   howpublished = {<\url{http://www.hep.shef.ac.uk/edaw/PHY206/Site/2012\_course\_files/phy206rlec7.pdf}> [žiūr.\ 2018-05-14]}
 }
 
 @misc{cmseta,
-  author  = {{Marcus Friedl}},
+  author  = {{M.\ Friedl}},
   title   = {{CMS Detector Layout}},
   howpublished    = {<\url{http://www.hephy.at/user/friedl/diss/html/node8.html}> [žiūr.\ 2018-05-10]}
 }
@@ -82,9 +82,9 @@
 }
 
 @misc{CMSslice,
-  author = {{David Barney}},
+  author = {{D.\ Barney}},
   title = {{CMS slice (July 2010 version)}},
-  howpublished = {<\url{http://ippog.org/resources/2011/cms-slice-july-2010-version}> [žiūr.\ 2019-01-16]}
+  howpublished = {<\url{http://ippog.org/resources/2011/cms-slice-july-2010-version}> [žiūr.\ 2019-04-09]}
 }
 
 @misc{LHCexperiments,
@@ -153,14 +153,14 @@
 }
 
 @misc{PDFs,
-  author  = {{Stefano Forte, Graeme Watt}},
+  author  = {{S.\ Forte, G.\ Watt}},
   title   = {{Progress in the Determination of the Partonic Structure of the Proton}},
   year    = {2013},
-  howpublished = {Annu. Rev. Nucl. Part. Sci. 63 291-328}
+  howpublished = {Annu.\ Rev.\ Nucl.\ Part.\ Sci.\ 63 291}
 }
 
 @misc{PDFintro,
-  author  = {{Jo\"el Feltesse}},
+  author  = {{J.\ Feltesse}},
   title   = {{Introduction to Parton Distribution Functions}},
   howpublished = {Scholarpedia, 5(11):10160}
 }
@@ -169,7 +169,7 @@
   author  = {{The NNPDF Collaboration}},
   title   = {{Parton distributions from high-precision collider data}},
   year    = {2017},
-  howpublished = {Eur.Phys.J. C77 no.10, 663}
+  howpublished = {Eur.\ Phys.\ J.\ C77 no.\ 10 663}
 }  
 
 @misc{DYpic,
@@ -187,10 +187,10 @@
 }
 
 @misc{geant4,
-  author  = {{Stefano Agostinelli, John Allison et al.}},
+  author  = {{GEANT4 Collaboration}},
   title   = {{GEANT4 -- a simulation toolkit}},
   year    = {2003},
-  howpublished = {Nuclear Instruments and Methods in Physics Research A 506 250–303}
+  howpublished = {Nucl.\ Instrum.\ Meth.\ A506 250}
 }
 
 @misc{amcatnlo,
@@ -204,17 +204,17 @@
 }
 
 @misc{AN2013,
-  author  = {{Matthew Jones, David Silvers}},
+  author  = {{M.\ Jones, D.\ Silvers}},
   title   = {{Angular Distributions of Muons from Drell-Yan production}},
   year    = {2013},
   howpublished = {CMS AN-13-180, CERN CMS eksperimento vidinis dokumentas}
 }
 
 @misc{DYoriginal,
-  author  = {{Sidney David Drell, Tung-Mow Yan}},
+  author  = {{S.\ D.\ Drell, T.\ M.\ Yan}},
   title   = {{Massive Lepton Pair Production in Hadron-Hadron Collisions at High-Energies}},
   year    = {1970},
-  howpublished = {Phys. Rev. Lett. 25 316-320}
+  howpublished = {Phys.\ Rev.\ Lett.\ 25 316}
 }
 
 @misc{PF2017,
@@ -225,24 +225,24 @@
 }
 
 @misc{PDF0,
-  author  = {Ringailė Plačakytė},
+  author  = {R.\ Plačakytė},
   title   = {{Parton Distribution Functions}},
   year    = {2011},
   howpublished = {Proceedings, PIC 2011}
 }
 
 @misc{HiggsEx,
-  author  = {Georges Aad et al. (ATLAS Collaboration)},
+  author  = {ATLAS Collaboration},
   title   = {{Measurement of the Higgs boson mass from the $H\ensuremath{\rightarrow}\ensuremath{\gamma}\ensuremath{\gamma}$ and $H\ensuremath{\rightarrow}Z{Z}^{*}\ensuremath{\rightarrow}4\ensuremath{\ell}$ channels in $pp$ collisions at center-of-mass energies of 7 and 8 TeV with the ATLAS detector}},
   year    = {2014},
-  howpublished = {Phys. Rev. D 90 052004}
+  howpublished = {Phys.\ Rev.\ D90 052004}
 }
 
 @misc{ECALtrig,
-  author  = {Prasanna Kumar Siddireddy},
+  author  = {P.\ K.\ Siddireddy},
   title   = {{The CMS ECAL Trigger and DAQ system: electronics auto-recovery and monitoring}},
   year    = {2018},
-  howpublished = {CMS CR -2018/084}
+  howpublished = {CMS CR--2018-084}
 }
 
 @misc{CMSexperiment,
@@ -250,4 +250,86 @@
   title   = {{The CMS experiment at the CERN LHC}},
   howpublished = {JINST 3 S08004},
   year    = {2008}
+}
+
+@misc{DYNNLO,
+  author  = {{R.\ Hamberg, W.\ L.\ van Neerven, T.\ Matsuura}},
+  title   = {{A complete calculation of the order $\alpha_s^2$ correction to the Drell-Yan K-factor}},
+  howpublished = {Nucl.\ Phys.\ B359 343},
+  year    = {1991}
+}
+
+@misc{DY2018,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s}=13 \, \mathrm{TeV}$}},
+  howpublished = {CERN-EP-2018-320},
+  year    = {2018}
+}
+
+@misc{LHC,
+  title   = {{The Large Hadron Collider}},
+  howpublished = {<\url{https://home.cern/science/accelerators/large-hadron-collider}> [žiūr. 2019-04-02]}
+}
+
+@misc{CMStrig,
+  author  = {{The CMS Collaboration}},
+  title   = {{The CMS trigger system}},
+  howpublished = {JINST 12 P01020},
+  year    = {2017}
+}
+
+@misc{MG_aMCatNLO,
+  author  = {{J.\ Alwall et al.}},
+  title   = {{The automated computation of tree-level and next-to-leading order differential cross sections, and their matching to parton shower simulations}},
+  howpublished = {JHEP 07 079},
+  year    = {2014}
+}
+
+@misc{powheg_tW,
+  author  = {{E.\ Re}},
+  title   = {{Single-top $Wt$-channel production matched with parton showers using the POWHEG method}},
+  howpublished = {Eur.\ Phys.\ J.\ C71 1547},
+  year    = {2010}
+}
+
+@misc{powheg_ttbar,
+  author  = {{J.\ M.\ Campbell et al.}},
+  title   = {{Top-pair production and decay at NLO matched with parton showers}},
+  howpublished = {JHEP 04 114},
+  year    = {2015}
+}
+
+@misc{MuonID,
+  author  = {{The CMS Collaboration}},
+  title   = {{Performance of the CMS muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s}=13 \, \mathrm{TeV}$}},
+  howpublished = {JINST 13 P06015},
+  year    = {2018}
+}
+
+@misc{EleID,
+  author  = {{The CMS Collaboration}},
+  title   = {{Performance of electron reconstruction and selection with the CMS detector in proton-proton collisions at $\sqrt{s}=8 \, \mathrm{TeV}$}},
+  howpublished = {JINST 10 P06005},
+  year    = {2015}
+}
+
+@misc{RocCorr,
+  author  = {{A. Bodek et al.}},
+  title   = {{Extracting Muon Momentum Scale Corrections for Hadron Collider Experiments}},
+  howpublished = {Eur.\ Phys.\ J.\ C72 2194},
+  year    = {2012}
+}
+
+@misc{Ecorr,
+  author  = {{The CMS Collaboration}},
+  title   = {{ Energy Calibration and Resolution of the CMS Electromagnetic Calorimeter in $pp$ Collisions at $\sqrt{s}=7 \, \mathrm{TeV}$}},
+  howpublished = {JINST 8 P09009},
+  year    = {2013}
+}
+
+@misc{ttbarPT,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of differential cross sections for top quark pair production using the lepton+jets final state in proton-proton collisions at $13 \, \mathrm{TeV}$}},
+  howpublished = {Phys.\ Rev.\ D95 092001},
+  year    = {2017}
 }
