project scientific report v2

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -13,31 +13,31 @@
   author = {{T.\ Sjöstrand, S.\ Mrenna, P.\ Skands}},
   title  = {{A Brief Introduction to PYTHIA 8.1}},
   year   = {2008},
-  howpublished    = {Comput.\ Phys.\ Commun.\ 178 852}
+  howpublished    = {Comput.\ Phys.\ Commun.\ 178, 852}
 }
 
 @misc{pythia82,
   author = {{T.\ Sjöstrand et al.}},
   title  = {{An Introduction to PYTHIA 8.2}},
   year   = {2015},
-  howpublished = {Comput.\ Phys.\ Commun.\ 191 159}
+  howpublished = {Comput.\ Phys.\ Commun.\ 191, 159}
 }
 
 @misc{fewz,
   author = {{R.\ Gavin et al.}},
   title  = {{FEWZ 2.0: A code for hadronic Z production at next-to-next-to-leading order}},
   year   = {2011},
-  howpublished    = {Comput.\ Phys.\ Commun.\ 182 2388}
+  howpublished    = {Comput.\ Phys.\ Commun.\ 182, 2388}
 }
 
 @misc{cmsswtwiki,
   title   = {{CMSSW Application Framework}},
-  howpublished    = {CMS TWiki, <\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookCMSSWFramework}> [žiūr.\ 2018-05-15]}
+  howpublished    = {CMS TWiki, \url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookCMSSWFramework} [žiūr.\ 2018-05-15]}
 }
 
 @misc{cmsswev,
   title   = {{Event Generation and Simulation}},
-  howpublished    = {CMS TWiki <\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookChapter6}> [žiūr.\ 2018-05-15]}
+  howpublished    = {CMS TWiki \url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookChapter6} [žiūr.\ 2018-05-15]}
 }
 
 @misc{pflowpdf,
@@ -52,7 +52,7 @@
   author  = {{V.\ Gori}},
   title   = {{The CMS High Level Trigger}},
   year    = {2014},
-  howpublished = {Int.\ J.\ Mod.\ Phys.\ Conf.\ Ser.\ 31 1460297}
+  howpublished = {Int.\ J.\ Mod.\ Phys.\ Conf.\ Ser.\ 31, 1460297}
 }
 
 @misc{L1trigger,
@@ -65,13 +65,13 @@
 @misc{pseudorapidity,
   author  = {{E.\ Daw}},
   title   = {{Lecture 7 -- Rapidity and pseudorapidity}},
-  howpublished = {<\url{http://www.hep.shef.ac.uk/edaw/PHY206/Site/2012\_course\_files/phy206rlec7.pdf}> [žiūr.\ 2018-05-14]}
+  howpublished = {\url{http://www.hep.shef.ac.uk/edaw/PHY206/Site/2012\_course\_files/phy206rlec7.pdf} [žiūr.\ 2018-05-14]}
 }
 
 @misc{cmseta,
   author  = {{M.\ Friedl}},
   title   = {{CMS Detector Layout}},
-  howpublished    = {<\url{http://www.hephy.at/user/friedl/diss/html/node8.html}> [žiūr.\ 2018-05-10]}
+  howpublished    = {\url{http://www.hephy.at/user/friedl/diss/html/node8.html} [žiūr.\ 2018-05-10]}
 }
 
 @misc{DY13TeV,
@@ -84,47 +84,47 @@
 @misc{CMSslice,
   author = {{D.\ Barney}},
   title = {{CMS slice (July 2010 version)}},
-  howpublished = {<\url{http://ippog.org/resources/2011/cms-slice-july-2010-version}> [žiūr.\ 2019-04-09]}
+  howpublished = {\url{http://ippog.org/resources/2011/cms-slice-july-2010-version} [žiūr.\ 2019-04-09]}
 }
 
 @misc{LHCexperiments,
   title = {{LHC experiments}},
-  howpublished = {<\url{https://home.cern/science/experiments}> [žiūr.\ 2019-01-16]}
+  howpublished = {\url{https://home.cern/science/experiments} [žiūr.\ 2019-01-16]}
 }
 
 @misc{aboutCMS,
   title = {{CMS}},
-  howpublished = {<\url{https://home.cern/science/experiments/cms}> [žiūr. 2019-01-16]}
+  howpublished = {\url{https://home.cern/science/experiments/cms} [žiūr. 2019-01-16]}
 }
 
 @misc{CMSdetector,
   title = {{Detector}},
-  howpublished = {<\url{https://cms.cern/detector}> [žiūr.\ 2018-12-21]}
+  howpublished = {\url{https://cms.cern/detector} [žiūr.\ 2018-12-21]}
 }
 
 @misc{accelerators,
   title = {{Accelerators}},
-  howpublished = {<\url{https://home.cern/science/accelerators}> [žiūr.\ 2018-12-21]}
+  howpublished = {\url{https://home.cern/science/accelerators} [žiūr.\ 2018-12-21]}
 }
 
 @misc{Ecal,
   title = {{Energy of Electrons and Photons (ECAL)}},
-  howpublished = {<\url{http://cms.cern/detector/measuring-energy/energy-electrons-and-photons-ecal}> [žiūr.\ 2018-12-21]}
+  howpublished = {\url{http://cms.cern/detector/measuring-energy/energy-electrons-and-photons-ecal} [žiūr.\ 2018-12-21]}
 }
 
 @misc{Hcal,
   title = {{Energy of Hadrons (HCAL)}},
-  howpublished = {<\url{https://cms.cern/detector/measuring-energy/energy-hadrons-hcal}> [žiūr.\ 2018-12-21]}
+  howpublished = {\url{https://cms.cern/detector/measuring-energy/energy-hadrons-hcal} [žiūr.\ 2018-12-21]}
 }
 
 @misc{Solenoid,
   title = {{Bending Particles}},
-  howpublished = {<\url{http://cms.cern/detector/bending-particles}> [žiūr.\ 2018-12-21]}
+  howpublished = {\url{http://cms.cern/detector/bending-particles} [žiūr.\ 2018-12-21]}
 }
 
 @misc{MuonChambers,
   title = {{Detecting muons}},
-  howpublished = {<\url{http://cms.cern/detector/detecting-muons}> [žiūr.\ 2018-12-21]}
+  howpublished = {\url{http://cms.cern/detector/detecting-muons} [žiūr.\ 2018-12-21]}
 }
 
 @unpublished{ANote,
@@ -149,14 +149,14 @@
 
 @misc{MediumID2015,
   title   = {{Archive of previously recommended Cut Based Electron ID for Run 2}},
-  howpublished = {CMS TWiki, <\url{https://twiki.cern.ch/twiki/bin/view/CMS/CutBasedElectronIdentificationRun2Archive\#Spring15\_selection\_25ns}> [žiūr. 2018-05-14]}
+  howpublished = {CMS TWiki, \url{https://twiki.cern.ch/twiki/bin/view/CMS/CutBasedElectronIdentificationRun2Archive\#Spring15\_selection\_25ns} [žiūr. 2018-05-14]}
 }
 
 @misc{PDFs,
   author  = {{S.\ Forte, G.\ Watt}},
   title   = {{Progress in the Determination of the Partonic Structure of the Proton}},
   year    = {2013},
-  howpublished = {Annu.\ Rev.\ Nucl.\ Part.\ Sci.\ 63 291}
+  howpublished = {Annu.\ Rev.\ Nucl.\ Part.\ Sci.\ 63, 291}
 }
 
 @misc{PDFintro,
@@ -190,17 +190,17 @@
   author  = {{GEANT4 Collaboration}},
   title   = {{GEANT4 -- a simulation toolkit}},
   year    = {2003},
-  howpublished = {Nucl.\ Instrum.\ Meth.\ A506 250}
+  howpublished = {Nucl.\ Instrum.\ Meth.\ A506, 250}
 }
 
 @misc{amcatnlo,
   title   = {{MadGraph5\_aMC@NLO}},
-  howpublished = {<\url{https://launchpad.net/mg5amcnlo}> [žiūr.\ 2019-01-09]}
+  howpublished = {\url{https://launchpad.net/mg5amcnlo} [žiūr.\ 2019-01-09]}
 }
 
 @misc{ROOT,
   title   = {{ROOT a Data Analysis Framework}},
-  howpublished = {<\url{https://root.cern.ch/}> [žiūr.\ 2018-01-09]}
+  howpublished = {\url{https://root.cern.ch/} [žiūr.\ 2018-01-09]}
 }
 
 @misc{AN2013,
@@ -214,7 +214,7 @@
   author  = {{S.\ D.\ Drell, T.\ M.\ Yan}},
   title   = {{Massive Lepton Pair Production in Hadron-Hadron Collisions at High-Energies}},
   year    = {1970},
-  howpublished = {Phys.\ Rev.\ Lett.\ 25 316}
+  howpublished = {Phys.\ Rev.\ Lett.\ 25, 316}
 }
 
 @misc{PF2017,
@@ -235,7 +235,7 @@
   author  = {ATLAS Collaboration},
   title   = {{Measurement of the Higgs boson mass from the $H\ensuremath{\rightarrow}\ensuremath{\gamma}\ensuremath{\gamma}$ and $H\ensuremath{\rightarrow}Z{Z}^{*}\ensuremath{\rightarrow}4\ensuremath{\ell}$ channels in $pp$ collisions at center-of-mass energies of 7 and 8 TeV with the ATLAS detector}},
   year    = {2014},
-  howpublished = {Phys.\ Rev.\ D90 052004}
+  howpublished = {Phys.\ Rev.\ D90, 052004}
 }
 
 @misc{ECALtrig,
@@ -255,7 +255,7 @@
 @misc{DYNNLO,
   author  = {{R.\ Hamberg, W.\ L.\ van Neerven, T.\ Matsuura}},
   title   = {{A complete calculation of the order $\alpha_s^2$ correction to the Drell-Yan K-factor}},
-  howpublished = {Nucl.\ Phys.\ B359 343},
+  howpublished = {Nucl.\ Phys.\ B359, 343},
   year    = {1991}
 }
 
@@ -268,7 +268,7 @@
 
 @misc{LHC,
   title   = {{The Large Hadron Collider}},
-  howpublished = {<\url{https://home.cern/science/accelerators/large-hadron-collider}> [žiūr. 2019-04-02]}
+  howpublished = {\url{https://home.cern/science/accelerators/large-hadron-collider} [žiūr. 2019-04-02]}
 }
 
 @misc{CMStrig,
@@ -288,7 +288,7 @@
 @misc{powheg_tW,
   author  = {{E.\ Re}},
   title   = {{Single-top $Wt$-channel production matched with parton showers using the POWHEG method}},
-  howpublished = {Eur.\ Phys.\ J.\ C71 1547},
+  howpublished = {Eur.\ Phys.\ J.\ C71, 1547},
   year    = {2010}
 }
 
@@ -316,7 +316,7 @@
 @misc{RocCorr,
   author  = {{A. Bodek et al.}},
   title   = {{Extracting Muon Momentum Scale Corrections for Hadron Collider Experiments}},
-  howpublished = {Eur.\ Phys.\ J.\ C72 2194},
+  howpublished = {Eur.\ Phys.\ J.\ C72, 2194},
   year    = {2012}
 }
 
@@ -330,6 +330,69 @@
 @misc{ttbarPT,
   author  = {{The CMS Collaboration}},
   title   = {{Measurement of differential cross sections for top quark pair production using the lepton+jets final state in proton-proton collisions at $13 \, \mathrm{TeV}$}},
-  howpublished = {Phys.\ Rev.\ D95 092001},
+  howpublished = {Phys.\ Rev.\ D95, 092001},
+  year    = {2017}
+}
+
+@misc{PDF_CTEQ,
+  author  = {{S. Dulat et al.}},
+  title   = {{New parton distribution functions from a global analysis of quantum chromodynamics}},
+  howpublished = {Phys.\ Rev.\ D93, 033006},
+  year    = {2016}
+}
+
+@misc{PDF_ABMP16,
+  author  = {{S. Alekhin et al.}},
+  title   = {{Parton distribution functions, $\alpha_{s}$, and heavy quark masses for LHC run II}},
+  howpublished = {Phys.\ Rev.\ D96, 014011},
+  year    = {2017}
+}
+
+@misc{Higgs2018,
+  author  = {{The CMS Collaboration}},
+  title   = {{Observation of the Higgs boson decay to a pair of tau leptons with the CMS detector}},
+  howpublished = {Phys.\ Lett.\ B779, 283},
+  year    = {2018}
+}
+
+@misc{Zprime,
+  author  = {{The CMS Collaboration}},
+  title   = {{Search for narrow resonances in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=13 \, \mathrm{TeV}$ and combination with $8 \, \mathrm{TeV}$ data}},
+  howpublished = {Phys.\ Lett.\ B768, 57},
+  year    = {2017}
+}
+
+@misc{SUSYtau,
+  author  = {{The CMS Collaboration}},
+  title   = {{Search for supersymmetry in events with a $\tau$ lepton pair and missing transverse momentum in proton-proton collisions at $\sqrt{s}=13 \, \mathrm{TeV}$}},
+  howpublished = {JHEP 11 151},
+  year    = {2018}
+}
+
+@misc{DYrapiNNLO,
+  author  = {{Ch. Anastasiou et al.}},
+  title   = {{Dilepton rapidity distribution in the Drell-Yan process at NNLO in QCD}},
+  howpublished = {Phys.\ Rev.\ Lett.\ 91, 182002},
+  year    = {2003}
+}
+
+@misc{VecBosonNNLO,
+  author  = {{S. Catani et al.}},
+  title   = {{Vector Boson Production at Hadron Colliders: A Fully Exclusive QCD Calculation at Next-to-Next-to-Leading Order}},
+  howpublished = {Phys.\ Rev.\ Lett.\ 103, 082001},
+  year    = {2009}
+}
+
+@misc{DY2015,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurements of differential and double-differential Drell-Yan cross sections in proton-proton collisions at 8 TeV}},
+  howpublished = {Eur. Phys. J. C75, 147},
+  year    = {2015}
+}
+
+@misc{ParticleFlow,
+  author  = {{The CMS Collaboration}},
+  title   = {{Particle-flow reconstruction and global event description with the CMS detector}},
+  howpublished = {JINST 12 P10003},
   year    = {2017}
 }
